Make headers of preview table fixed. Make content scrollable.
Problem: it doesn't look so good, also borders are hidden under scrolling.

Solution: fix it, also fix other minor issues.

--- a/frontend/src/components/Table/Table.scss
+++ b/frontend/src/components/Table/Table.scss
@@ -8,18 +8,17 @@
   border-spacing: 0;
 
   &__columnHead {
-    position: relative;
-    padding-top: $head-vertical-padding;
-    padding-bottom: $head-vertical-padding;
-    padding-left: $cell-indent;
+    position: sticky;
+    top: 0;
+    padding: $head-vertical-padding 0 $head-vertical-padding $cell-indent;
 
     font-size: 14 * $px;
-    font-style: normal;
     font-weight: 400;
     line-height: $head-line-height;
 
     color: #9ba5a1;
     text-align: left;
+    background-color: white;
     border-bottom: $px solid $border-color;
 
     &:last-child {
@@ -37,47 +36,48 @@
     background-color: #eaeaea;
   }
 
-  &__rowHovered {
-    &:hover {
-      background-color: $color-light-green;
+  &__row {
+    &_withHover {
+      &:hover {
+        background-color: $color-light-green;
+      }
     }
   }
 
   &__cell {
-    padding-top: 16 * $px;
-    padding-bottom: 16 * $px;
-
-    padding-left: $cell-indent;
+    padding: (16 * $px) 0 (16 * $px) $cell-indent;
     border-bottom: $px solid $border-color;
   }
 
-  &__cell_odd {
-    background-color: $color-light-green;
-    border: 0;
+  &__cell {
+    &_odd {
+      background-color: $color-light-green;
+      border: 0;
 
-    &:first-child {
-      border-bottom-left-radius: 8 * $px;
+      &:first-child {
+        border-bottom-left-radius: 8 * $px;
+      }
+
+      &:last-child {
+        border-bottom-right-radius: 8 * $px;
+      }
     }
 
-    &:last-child {
-      border-bottom-right-radius: 8 * $px;
+    &_even {
+      border: 0;
+
+      &:first-child {
+        border-bottom-left-radius: 8 * $px;
+      }
+
+      &:last-child {
+        border-bottom-right-radius: 8 * $px;
+      }
     }
-  }
 
-  &__cell_even {
-    border: 0;
-
-    &:first-child {
-      border-bottom-left-radius: 8 * $px;
+    &_small {
+      padding-top: 11 * $px;
+      padding-bottom: 11 * $px;
     }
-
-    &:last-child {
-      border-bottom-right-radius: 8 * $px;
-    }
-  }
-
-  &__cell_small {
-    padding-top: 11 * $px;
-    padding-bottom: 11 * $px;
   }
 }
